--- a/Spotival/visuals/MainWindow.xaml
+++ b/Spotival/visuals/MainWindow.xaml
@@ -5,6 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Spotival"
         mc:Ignorable="d"
+        WindowStyle="None"
+        WindowState="Maximized"
         Title="MainWindow" Height="800" Width="1200">
     <Grid>
         
