--- a/Spotival/visuals/ExplorerWindow.xaml
+++ b/Spotival/visuals/ExplorerWindow.xaml
@@ -21,7 +21,7 @@
             <Setter Property="Opacity" Value="40" />
         </Style>
     </Page.Resources>
-    <Grid>
+    <Grid x:Name="GridPage">
         <Separator BorderBrush="Gray" Height="100" Margin="456,-27,574,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Separator.RenderTransform>
                 <TransformGroup>
@@ -52,22 +52,22 @@
         <ListView x:Name="ListViewMusic" Margin="481,46,0,0" Background="#303030">
             <ListView.View>
                 <GridView x:Name="GridViewMusic">
-                    <GridViewColumn Width="80" DisplayMemberBinding="{Binding Name}">
+                    <GridViewColumn Width="80">
                         <GridViewColumn.Header>
                             <GridViewColumnHeader Tag="Player" Background="#303030" Foreground="White"></GridViewColumnHeader>
                         </GridViewColumn.Header>
                     </GridViewColumn>
-                    <GridViewColumn Width="270" DisplayMemberBinding="{Binding Title}">
+                    <GridViewColumn Width="270" DisplayMemberBinding="{Binding Titre}">
                         <GridViewColumn.Header>
                             <GridViewColumnHeader Tag="Title" Background="#303030" Foreground="White">Titre</GridViewColumnHeader>
                         </GridViewColumn.Header>
                     </GridViewColumn>
-                    <GridViewColumn Width="180" DisplayMemberBinding="{Binding Artist}">
+                    <GridViewColumn Width="180" DisplayMemberBinding="{Binding Artiste}">
                         <GridViewColumn.Header>
                             <GridViewColumnHeader Tag="Artist" Background="#303030" Foreground="White">Artiste</GridViewColumnHeader>
                         </GridViewColumn.Header>
                     </GridViewColumn>
-                    <GridViewColumn Width="60" DisplayMemberBinding="{Binding Time}">
+                    <GridViewColumn Width="60" DisplayMemberBinding="{Binding Durée}">
                         <GridViewColumn.Header>
                             <GridViewColumnHeader Tag="Time" Background="#303030" Foreground="White">Durée</GridViewColumnHeader>
                         </GridViewColumn.Header>
