--- a/Spotival/visuals/ExplorerWindow.xaml
+++ b/Spotival/visuals/ExplorerWindow.xaml
@@ -32,7 +32,7 @@
                 </TransformGroup>
             </Separator.RenderTransform>
         </Separator>
-        <TreeView Name="treeView" Margin="0,46,599,0" Background="#303030" FontSize="15" RenderTransformOrigin="-0.917,-2.333">
+        <TreeView Name="TreeViewNavigate" MouseDoubleClick="TreeViewNavigate_MouseDoubleClick" Margin="0,46,599,0" Background="#303030" FontSize="15" RenderTransformOrigin="-0.917,-2.333">
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
@@ -49,7 +49,7 @@
                 </HierarchicalDataTemplate>
             </TreeView.Resources>
         </TreeView>
-        <ListView x:Name="ListViewMusic" Margin="481,46,0,0" Background="#303030">
+        <ListView x:Name="ListViewMusic" Margin="481,46,0,0" Background="#303030" Foreground="White">
             <ListView.View>
                 <GridView x:Name="GridViewMusic">
                     <GridViewColumn Width="80">
