--- a/Spotival/visuals/ExplorerWindow.xaml
+++ b/Spotival/visuals/ExplorerWindow.xaml
@@ -20,6 +20,10 @@
             <Setter Property="Padding" Value="5" />
             <Setter Property="Opacity" Value="40" />
         </Style>
+        <Style TargetType="GridViewColumnHeader">
+            <Setter Property="Background" Value="#303030"/>
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
     </Page.Resources>
     <Grid x:Name="GridPage">
         <Separator BorderBrush="Gray" Height="100" Margin="456,-27,574,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
@@ -52,26 +56,27 @@
         <ListView x:Name="ListViewMusic" Margin="481,46,0,0" Background="#303030" Foreground="White">
             <ListView.View>
                 <GridView x:Name="GridViewMusic">
-                    <GridViewColumn Width="80">
-                        <GridViewColumn.Header>
-                            <GridViewColumnHeader Tag="Player" Background="#303030" Foreground="White"></GridViewColumnHeader>
-                        </GridViewColumn.Header>
+                    <GridViewColumn Width="35" >
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button x:Name="btnAdd" BorderThickness="0" Background="Transparent" Click="btnAdd_Click">
+                                    <Image Width="20" Source="../resources/plus.png"/>
+                                </Button>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Width="270" DisplayMemberBinding="{Binding Titre}">
-                        <GridViewColumn.Header>
-                            <GridViewColumnHeader Tag="Title" Background="#303030" Foreground="White">Titre</GridViewColumnHeader>
-                        </GridViewColumn.Header>
+                    <GridViewColumn Width="35">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button BorderThickness="0" Background="Transparent">
+                                    <Image Width="20" Source="../resources/player_song.png"/>
+                                </Button>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Width="180" DisplayMemberBinding="{Binding Artiste}">
-                        <GridViewColumn.Header>
-                            <GridViewColumnHeader Tag="Artist" Background="#303030" Foreground="White">Artiste</GridViewColumnHeader>
-                        </GridViewColumn.Header>
-                    </GridViewColumn>
-                    <GridViewColumn Width="60" DisplayMemberBinding="{Binding Durée}">
-                        <GridViewColumn.Header>
-                            <GridViewColumnHeader Tag="Time" Background="#303030" Foreground="White">Durée</GridViewColumnHeader>
-                        </GridViewColumn.Header>
-                    </GridViewColumn>
+                    <GridViewColumn Header="Titre" DisplayMemberBinding="{Binding Titre}" Width="270"/>
+                    <GridViewColumn Header="Artiste" DisplayMemberBinding="{Binding Artiste}" Width="180"/>
+                    <GridViewColumn Header="Durée" DisplayMemberBinding="{Binding Durée}" Width="60"/>
                 </GridView>
             </ListView.View>
         </ListView>
