--- a/Spotival/visuals/MainWindow.xaml
+++ b/Spotival/visuals/MainWindow.xaml
@@ -24,7 +24,12 @@
             </Grid.RowDefinitions>
             <Grid.Resources>
                 <Style TargetType="Button">
-                    <Setter Property="Background" Value="#303030"></Setter>
+                    <Setter Property="Background" Value="#303030"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="Yellow"/>
+                        </Trigger>
+                    </Style.Triggers>
                 </Style>
             </Grid.Resources>
             <Button x:Name="btnHome" Click="SelectFunction" Margin="0,0,4,0" HorizontalAlignment="Right" Width="122" Grid.Row="0">
@@ -54,24 +59,17 @@
                 <RowDefinition Height="100"/>
                 <RowDefinition Height="100"/>
             </Grid.RowDefinitions>
-            
+
             <Border BorderBrush="gray" BorderThickness="1" Margin="0,0,757,99" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="3"/>
             <Image Source="../resources/album.jpg" Margin="10,11,106,9"/>
-            <TextBlock Grid.Row="0" Margin="94,30,762,49" Grid.ColumnSpan="3" Foreground="White">test</TextBlock>
+            <TextBlock FontSize="15" Grid.Row="0" Margin="94,30,762,49" Grid.ColumnSpan="3" Foreground="White">test</TextBlock>
             <TextBlock Margin="94,56,762,21" Foreground="gray" Grid.ColumnSpan="3">test</TextBlock>
 
-            <Border BorderBrush="gray" BorderThickness="1" Margin="66,0,0,99" Grid.RowSpan="2" Grid.Column="2"/>
-            <Button Margin="429,28,370,49" Grid.Column="2" Background="Transparent" BorderThickness="0">
-                <Image Source="../resources/play.png"/>
-            </Button>
-            <Button Margin="380,28,420,49" Grid.Column="2" Background="Transparent" BorderThickness="0">
-                <Image Source="../resources/previous.png" />
-            </Button>
-            <Button Margin="478,28,322,49" Grid.Column="2" Background="Transparent" BorderThickness="0">
-                <Image Source="../resources/next.png"/>
-            </Button>
-            <Button Margin="711,28,89,49" Grid.Column="2" Background="Transparent" BorderThickness="0">
-                <Image Source="../resources/volume.png"/>
+            <Border BorderBrush="Gray" BorderThickness="1" Margin="66,0,0,99" Grid.RowSpan="2" Grid.Column="2">
+                <Slider Margin="128,41,134,39"/>
+            </Border>
+            <Button>
+                <Image
             </Button>
         </Grid>
         <Frame x:Name="mainFrame" Margin="120,0,0,101" NavigationUIVisibility="Hidden" JournalOwnership="OwnsJournal"/>
