--- a/Spotival/visuals/MainWindow.xaml
+++ b/Spotival/visuals/MainWindow.xaml
@@ -59,18 +59,65 @@
                 <RowDefinition Height="100"/>
                 <RowDefinition Height="100"/>
             </Grid.RowDefinitions>
+            <Grid.Resources>
+                <Style x:Key="SliderRepeatButton" TargetType="RepeatButton">
+                    <Setter Property="SnapsToDevicePixels" Value="true" />
+                    <Setter Property="OverridesDefaultStyle" Value="true" />
+                    <Setter Property="IsTabStop" Value="false" />
+                    <Setter Property="Focusable" Value="false" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="RepeatButton">
+                                <Border  BorderThickness="1" BorderBrush="Black" Background="Black" Height="3"/>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+
+                <Style x:Key="SliderRepeatButton1" TargetType="RepeatButton">
+                    <Setter Property="SnapsToDevicePixels" Value="true" />
+                    <Setter Property="OverridesDefaultStyle" Value="true" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="RepeatButton">
+                                <Border SnapsToDevicePixels="True" Background="Green"  BorderThickness="1" BorderBrush="YellowGreen" Height="3"/>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+
+                <Style x:Key="SliderThumb" TargetType="Thumb">
+                    <Setter Property="SnapsToDevicePixels" Value="true" />
+                    <Setter Property="OverridesDefaultStyle" Value="true" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="Thumb">
+                                <Ellipse x:Name="Ellipse" Height="10" Width="10" Fill="Green"></Ellipse>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="true">
+                                        <Setter TargetName="Ellipse" Property="Fill" Value="Yellow"></Setter>
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Grid.Resources>
 
             <Border BorderBrush="gray" BorderThickness="1" Margin="0,0,757,99" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="3"/>
             <Image Source="../resources/album.jpg" Margin="10,11,106,9"/>
             <TextBlock FontSize="15" Grid.Row="0" Margin="94,30,762,49" Grid.ColumnSpan="3" Foreground="White">test</TextBlock>
             <TextBlock Margin="94,56,762,21" Foreground="gray" Grid.ColumnSpan="3">test</TextBlock>
 
-            <Border BorderBrush="Gray" BorderThickness="1" Margin="66,0,0,99" Grid.RowSpan="2" Grid.Column="2">
-                <Slider Margin="128,41,134,39"/>
-            </Border>
-            <Button>
-                <Image
+            <Border BorderBrush="Gray" BorderThickness="1" Margin="66,0,0,99" Grid.RowSpan="2" Grid.Column="2"/>
+
+            <Label Content="00:00" Margin="154,36,623,41" Grid.Column="2" Foreground="White"/>
+            <RepeatButton Style="{StaticResource SliderRepeatButton}" Command="Slider.IncreaseLarge" Grid.Column="2" Margin="200,1,86,99" Grid.RowSpan="2" />
+
+            <Button Margin="92,30,690,29" Grid.Column="2" Background="Transparent" BorderThickness="0">
+                <Image Source="../resources/play_icon.png" Width="38"/>
             </Button>
+            <Label Content="00:00" Margin="745,36,32,41" Grid.Column="2" Foreground="White"/>
         </Grid>
         <Frame x:Name="mainFrame" Margin="120,0,0,101" NavigationUIVisibility="Hidden" JournalOwnership="OwnsJournal"/>
         <!--Frame de navigation-->
